kubernetes/iptables-rules-installed-by-kube-proxy.out
# Generated by iptables-save v1.6.0 on Fri Jun  8 16:37:52 2018
*nat
:PREROUTING ACCEPT [7:803]
:INPUT ACCEPT [6:771]
:OUTPUT ACCEPT [12:3368]
:POSTROUTING ACCEPT [12:3368]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-6766L5ICEYYM5UKQ - [0:0]
:KUBE-SEP-7A24ZR7CMRAAUHS3 - [0:0]
:KUBE-SEP-CZWIWQ4ZNG7TWID6 - [0:0]
:KUBE-SEP-F2BE6KGT5CRRCB4Z - [0:0]
:KUBE-SEP-GIN6KDIMOPST6HWJ - [0:0]
:KUBE-SEP-LQKSOJV6ORXRZOVW - [0:0]
:KUBE-SEP-MZ7UD2VLEMZ73DPS - [0:0]
:KUBE-SEP-R2I4JR3GW6FNMFEI - [0:0]
:KUBE-SEP-R3BS2SGAFPIEKEWB - [0:0]
:KUBE-SEP-T3255DXCOSMHHF7M - [0:0]
:KUBE-SEP-UZ3TOO3MRB2JPNVO - [0:0]
:KUBE-SEP-XRQJARLDNQVZSPT3 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-BJM46V3U5RZHCFRZ - [0:0]
:KUBE-SVC-CK6HVV5A27TDFNIA - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JRXTEHDDTAFMSEAS - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-UQBH2ZZME22RGMYL - [0:0]
:KUBE-SVC-WEHLQ23XZWSA5ZX3 - [0:0]
:KUBE-SVC-XGLOHA7QRQ3V22RZ - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 30000 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 30000 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/monitoring-grafana:" -m tcp --dport 30002 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/monitoring-grafana:" -m tcp --dport 30002 -j KUBE-SVC-JRXTEHDDTAFMSEAS
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-6766L5ICEYYM5UKQ -s 172.17.0.4/32 -m comment --comment "default/frontend-vw995:" -j KUBE-MARK-MASQ
-A KUBE-SEP-6766L5ICEYYM5UKQ -p tcp -m comment --comment "default/frontend-vw995:" -m tcp -j DNAT --to-destination 172.17.0.4:80
-A KUBE-SEP-7A24ZR7CMRAAUHS3 -s 172.17.0.7/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-7A24ZR7CMRAAUHS3 -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 172.17.0.7:9090
-A KUBE-SEP-CZWIWQ4ZNG7TWID6 -s 172.17.0.5/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-CZWIWQ4ZNG7TWID6 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 172.17.0.5:53
-A KUBE-SEP-F2BE6KGT5CRRCB4Z -s 172.17.0.2/32 -m comment --comment "kube-system/monitoring-influxdb:api" -j KUBE-MARK-MASQ
-A KUBE-SEP-F2BE6KGT5CRRCB4Z -p tcp -m comment --comment "kube-system/monitoring-influxdb:api" -m tcp -j DNAT --to-destination 172.17.0.2:8086
-A KUBE-SEP-GIN6KDIMOPST6HWJ -s 172.17.0.5/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-GIN6KDIMOPST6HWJ -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 172.17.0.5:53
-A KUBE-SEP-LQKSOJV6ORXRZOVW -s 10.6.65.158/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-LQKSOJV6ORXRZOVW -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-LQKSOJV6ORXRZOVW --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.6.65.158:8443
-A KUBE-SEP-MZ7UD2VLEMZ73DPS -s 172.17.0.9/32 -m comment --comment "default/frontend-vw995:" -j KUBE-MARK-MASQ
-A KUBE-SEP-MZ7UD2VLEMZ73DPS -p tcp -m comment --comment "default/frontend-vw995:" -m tcp -j DNAT --to-destination 172.17.0.9:80
-A KUBE-SEP-R2I4JR3GW6FNMFEI -s 172.17.0.2/32 -m comment --comment "kube-system/monitoring-grafana:" -j KUBE-MARK-MASQ
-A KUBE-SEP-R2I4JR3GW6FNMFEI -p tcp -m comment --comment "kube-system/monitoring-grafana:" -m tcp -j DNAT --to-destination 172.17.0.2:3000
-A KUBE-SEP-R3BS2SGAFPIEKEWB -s 172.17.0.2/32 -m comment --comment "kube-system/monitoring-influxdb:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-R3BS2SGAFPIEKEWB -p tcp -m comment --comment "kube-system/monitoring-influxdb:http" -m tcp -j DNAT --to-destination 172.17.0.2:8083
-A KUBE-SEP-T3255DXCOSMHHF7M -s 172.17.0.6/32 -m comment --comment "kube-system/heapster:" -j KUBE-MARK-MASQ
-A KUBE-SEP-T3255DXCOSMHHF7M -p tcp -m comment --comment "kube-system/heapster:" -m tcp -j DNAT --to-destination 172.17.0.6:8082
-A KUBE-SEP-UZ3TOO3MRB2JPNVO -s 172.17.0.8/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-UZ3TOO3MRB2JPNVO -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 172.17.0.8:9090
-A KUBE-SEP-XRQJARLDNQVZSPT3 -s 172.17.0.3/32 -m comment --comment "default/frontend-vw995:" -j KUBE-MARK-MASQ
-A KUBE-SEP-XRQJARLDNQVZSPT3 -p tcp -m comment --comment "default/frontend-vw995:" -m tcp -j DNAT --to-destination 172.17.0.3:80
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.97.83.43/32 -p tcp -m comment --comment "kube-system/kubernetes-dashboard: cluster IP" -m tcp --dport 80 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-SERVICES -d 10.107.248.35/32 -p tcp -m comment --comment "default/frontend-vw995: cluster IP" -m tcp --dport 80 -j KUBE-SVC-UQBH2ZZME22RGMYL
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.126.184/32 -p tcp -m comment --comment "kube-system/monitoring-grafana: cluster IP" -m tcp --dport 80 -j KUBE-SVC-JRXTEHDDTAFMSEAS
-A KUBE-SERVICES -d 10.107.236.24/32 -p tcp -m comment --comment "kube-system/monitoring-influxdb:http cluster IP" -m tcp --dport 8083 -j KUBE-SVC-WEHLQ23XZWSA5ZX3
-A KUBE-SERVICES -d 10.107.236.24/32 -p tcp -m comment --comment "kube-system/monitoring-influxdb:api cluster IP" -m tcp --dport 8086 -j KUBE-SVC-CK6HVV5A27TDFNIA
-A KUBE-SERVICES -d 10.98.122.239/32 -p tcp -m comment --comment "kube-system/heapster: cluster IP" -m tcp --dport 80 -j KUBE-SVC-BJM46V3U5RZHCFRZ
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-BJM46V3U5RZHCFRZ -m comment --comment "kube-system/heapster:" -j KUBE-SEP-T3255DXCOSMHHF7M
-A KUBE-SVC-CK6HVV5A27TDFNIA -m comment --comment "kube-system/monitoring-influxdb:api" -j KUBE-SEP-F2BE6KGT5CRRCB4Z
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-CZWIWQ4ZNG7TWID6
-A KUBE-SVC-JRXTEHDDTAFMSEAS -m comment --comment "kube-system/monitoring-grafana:" -j KUBE-SEP-R2I4JR3GW6FNMFEI
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-LQKSOJV6ORXRZOVW --mask 255.255.255.255 --rsource -j KUBE-SEP-LQKSOJV6ORXRZOVW
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-LQKSOJV6ORXRZOVW
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-GIN6KDIMOPST6HWJ
-A KUBE-SVC-UQBH2ZZME22RGMYL -m comment --comment "default/frontend-vw995:" -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-XRQJARLDNQVZSPT3
-A KUBE-SVC-UQBH2ZZME22RGMYL -m comment --comment "default/frontend-vw995:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-6766L5ICEYYM5UKQ
-A KUBE-SVC-UQBH2ZZME22RGMYL -m comment --comment "default/frontend-vw995:" -j KUBE-SEP-MZ7UD2VLEMZ73DPS
-A KUBE-SVC-WEHLQ23XZWSA5ZX3 -m comment --comment "kube-system/monitoring-influxdb:http" -j KUBE-SEP-R3BS2SGAFPIEKEWB
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-7A24ZR7CMRAAUHS3
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-SEP-UZ3TOO3MRB2JPNVO
COMMIT
# Completed on Fri Jun  8 16:37:52 2018
# Generated by iptables-save v1.6.0 on Fri Jun  8 16:37:52 2018
*filter
:INPUT ACCEPT [996:369082]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [971:368290]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
COMMIT
# Completed on Fri Jun  8 16:37:52 2018
